[project]
name = "mongodb-injection-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "blinker==1.9.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "flask==3.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mongomock==4.3.0",
    "packaging==25.0",
    "pymongo==4.12.0",
    "pytz==2025.2",
    "sentinels==1.0.0",
    "werkzeug==3.1.3",
]
